basic display created

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -3,9 +3,17 @@
 </head>
 
 <body>
-  <h1>
-      Odin Library
-  </h1>
+  <div id=content>
+    <header class="navbar">
+      <h1>To do list</h1>
+    </header>
+    <content id="content-text">
+      
+    </content>
+    <footer class="footer">
+      <p>Copyright Royal Kefta incorporated. All rights reserved.</p>
+    </footer>
+  </div>
 
   <script type="text/javascript" src="script.js"></script>
 </body>
