basic project display function

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -7,9 +7,14 @@
     <header class="navbar">
       <h1>To do list</h1>
     </header>
-    <content id="content-text">
-      
-    </content>
+    <div id="main-content-screen">
+      <aside id="project-view">
+
+      </aside>
+      <content id="content-text">
+        
+      </content>
+    </div>
     <footer class="footer">
       <p>Copyright Royal Kefta incorporated. All rights reserved.</p>
     </footer>
