basic modal created

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -12,8 +12,14 @@
 
       </aside>
       <content id="content-text">
-        
+
       </content>
+    </div>
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p>Some text in the Modal..</p>
+      </div>
     </div>
     <footer class="footer">
       <p>Copyright Royal Kefta incorporated. All rights reserved.</p>
