--- a/to-do-list.html
+++ b/to-do-list.html
@@ -18,7 +18,7 @@
     <div id="myModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p>Some text in the Modal..</p>
+        <p id="modal-description-text">Some text in the Modal..</p>
       </div>
     </div>
     <footer class="footer">
