modal display function finalized

--- a/to-do-list.html
+++ b/to-do-list.html
@@ -18,7 +18,10 @@
     <div id="myModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
-        <p id="modal-description-text">Some text in the Modal..</p>
+        <p id="modal-title"></p>
+        <p id="modal-date"></p>
+        <p id="modal-description-text"></p>
+        <button id="delete-button"></button>
       </div>
     </div>
     <footer class="footer">
